[metadata]
name = plover-combo
version = 1.0.2
description = Combo Mode for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaoffie
author_email = kaoffie@gmail.com
url = https://github.com/Kaoffie/plover_combo
license = MIT License (MIT)
classifiers = 
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
    plover >= 4.0.0.dev8
packages = 
    plover_combo

[options.entry_points]
plover.gui.qt.tool =
  combo_tool = plover_combo.combo_ui:ComboTool
